--- a/css/style.css
+++ b/css/style.css
@@ -608,7 +608,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .feature-col > div > div:last-child {
-  padding-left: 20px;
+/*  padding-left: 20px;*/
 }
 
 .feature-col .feature-icon {
