--- a/css/style.css
+++ b/css/style.css
@@ -1103,6 +1103,15 @@ body.mobile-nav-active #mobile-nav-toggle {
         margin-bottom: 0px;
         padding-bottom: 9px;
     }
+    
+    .about {
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+}
+
+    #stakeholders {
+        padding-top: 0px;
+    }
 }
 
 @media (max-width: 400px) {
