--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ a:hover {
   display: table;
   position: relative;
   background-image: url(../img/heart.svg);
+    background-color: #004378;
   background-size: cover;
   padding: 150px 0;
   color: #fff;
@@ -1114,7 +1115,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .block {
     padding-left: 30px;
     padding-right: 30px;
