--- a/css/style.css
+++ b/css/style.css
@@ -533,6 +533,63 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* ==================================================
+  Problem Styling
+================================================== */
+
+.problem-content {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 20% 60% 20%;
+    grid-gap: 8px;
+    justify-items: center;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+.a1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    display: flex;
+    background-color: antiquewhite;
+    text-align: center;
+}
+
+.a2 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-color: antiquewhite;
+    text-align: center;
+}
+
+.gap {
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+
+.b1 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-color: antiquewhite;
+    text-align: center;
+}
+
+.b2 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    background-color: antiquewhite;
+    text-align: center;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    padding: 0;
+}
+
+
+/* ==================================================
   Stats Styling
 ================================================== */
 .stats-row {
@@ -1132,4 +1189,5 @@ body.mobile-nav-active #mobile-nav-toggle {
         margin-bottom: 0px;
         padding-bottom: 9px;
     }
+    
 }
