--- a/css/style.css
+++ b/css/style.css
@@ -550,15 +550,19 @@ body.mobile-nav-active #mobile-nav-toggle {
     grid-column: 1/2;
     grid-row: 1/2;
     display: flex;
-    background-color: antiquewhite;
+    background-color: #199EB8;
+    color: white;
     text-align: center;
+    padding: 20px;
 }
 
 .a2 {
     grid-column: 2/3;
     grid-row: 1/2;
-    background-color: antiquewhite;
+    background-color: #199EB8;
+    color: white;
     text-align: center;
+    padding: 20px;
 }
 
 .gap {
@@ -569,15 +573,19 @@ body.mobile-nav-active #mobile-nav-toggle {
 .b1 {
     grid-column: 1/2;
     grid-row: 3/4;
-    background-color: antiquewhite;
+    background-color: #199EB8;
+    color: white;
     text-align: center;
+    padding: 20px;
 }
 
 .b2 {
     grid-column: 2/3;
     grid-row: 3/4;
-    background-color: antiquewhite;
+    background-color: #199EB8;
+    color: white;
     text-align: center;
+    padding: 20px;
 }
 
 hr {
