--- a/css/style.css
+++ b/css/style.css
@@ -554,6 +554,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     color: white;
     text-align: center;
     padding: 20px;
+    border-radius: 10px;
 }
 
 .a2 {
@@ -563,6 +564,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     color: white;
     text-align: center;
     padding: 20px;
+    border-radius: 10px;
 }
 
 .gap {
@@ -577,6 +579,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     color: white;
     text-align: center;
     padding: 20px;
+    border-radius: 10px;
 }
 
 .b2 {
@@ -586,6 +589,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     color: white;
     text-align: center;
     padding: 20px;
+    border-radius: 10px;
 }
 
 hr {
