--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ a {
 
 .values {
 	margin-top: 0px;
-    padding: 5px;
+    padding: 20px;
     width: 100%;
     text-align: center;
     background-color: #199EB8;
@@ -545,7 +545,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 .a1 {
     grid-column: 1/2;
     grid-row: 1/2;
-    display: flex;
     background-color: #199EB8;
     color: white;
     text-align: center;
@@ -599,6 +598,56 @@ hr {
     border: 0;
     border-top: 1px solid #ccc;
     padding: 0;
+}
+
+.stakeholders-content {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 20% 60% 20%;
+    justify-items: center;
+    align-items: center;
+    margin-bottom: 40px;
+    grid-gap: 1px;
+}
+
+.t1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 136px;
+}
+
+.t2 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 135px;
+}
+
+.t3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 135px;
+}
+
+.t4 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 135px;
 }
 
 
@@ -1061,6 +1110,8 @@ hr {
 .about {
     margin-bottom: 0px;
     padding-bottom: 0px;
+    margin-top: 0px;
+    padding-top: 20px;
 }
 
 #stakeholders {
@@ -1178,11 +1229,62 @@ hr {
     .about {
     margin-bottom: 0px;
     padding-bottom: 0px;
+    margin-top: 0px;
 }
 
     #stakeholders {
         padding-top: 0px;
     }
+    
+    .stakeholders-content {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 20% 60% 20%;
+    justify-items: center;
+    align-items: center;
+    margin-bottom: 40px;
+    grid-gap: 1px;
+}
+
+.t1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 136px;
+}
+
+.t2 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 135px;
+}
+
+.t3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 135px;
+}
+
+.t4 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 135px;
+}
 }
 
 @media (max-width: 500px) {
@@ -1207,4 +1309,54 @@ hr {
     width: 80%
 }
     
+    .stakeholders-content {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 20% 60% 20%;
+    justify-items: center;
+    align-items: center;
+    margin-bottom: 40px;
+    grid-gap: 1px;
+}
+
+.t1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 200px;
+}
+
+.t2 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 135px;
+}
+
+.t3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 135px;
+}
+
+.t4 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    min-height: 135px;
+}
+ 
 }
