--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ a {
   ================================================== */
 .btn {
   background-color: #199EB8;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
   font-weight: 800;
   color: #fff;
   padding: 15px 45px;
@@ -138,7 +138,6 @@ a:hover {
   display: table;
   position: relative;
   background-image: url(../img/heart.svg);
-    background-color: #004378;
   background-size: cover;
   padding: 150px 0;
   color: #fff;
@@ -176,7 +175,6 @@ a:hover {
   content: '';
   z-index: 0;
   position: absolute;
-  background: rgba(0, 0, 0, 0.65);
   width: 100%;
   height: 100%;
   left: 0;
@@ -195,10 +193,6 @@ a:hover {
 .hero-brand {
   margin-bottom: 75px;
   display: inline-block;
-}
-
-.hero-brand:hover {
-  opacity: .75;
 }
 
 .tagline {
@@ -365,7 +359,7 @@ a:hover {
   text-decoration: none;
   display: inline-block;
   color: #fff;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 300;
   font-size: 15px;
   outline: none;
@@ -756,7 +750,7 @@ hr {
 }
 
 .feature-col p {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #999;
 }
@@ -1098,7 +1092,7 @@ hr {
 
 .site-footer .bottom .list-inline a {
   color: #fff;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
   margin-right: 15px;
 }
 
