--- a/css/style.css
+++ b/css/style.css
@@ -1214,19 +1214,6 @@ hr {
         margin-right: 20px;
     }
     
-    .hero {
-      display: table;
-      position: relative;
-      background-image: url(../img/robo_human_wisdom_vert.svg);
-      background-size: 70vh;
-     background-repeat: repeat-x;
-      padding: 150px 0;
-      color: #fff;
-      width: 100%;
-        margin-bottom: 0px;
-        padding-bottom: 9px;
-    }
-    
     .about {
     margin-bottom: 0px;
     padding-bottom: 0px;
@@ -1235,16 +1222,13 @@ hr {
 
     #stakeholders {
         padding-top: 0px;
+        display: block;
     }
     
     .stakeholders-content {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 20% 60% 20%;
-    justify-items: center;
-    align-items: center;
+    display: block;
     margin-bottom: 40px;
-    grid-gap: 1px;
+    border: 1px solid white;
 }
 
 .t1 {
@@ -1255,6 +1239,7 @@ hr {
     text-align: center;
     padding: 20px;
     min-height: 136px;
+    border: 2px solid white;
 }
 
 .t2 {
@@ -1265,6 +1250,7 @@ hr {
     text-align: center;
     padding: 20px;
     min-height: 135px;
+    border: 2px solid white;
 }
 
 .t3 {
@@ -1275,6 +1261,7 @@ hr {
     text-align: center;
     padding: 20px;
     min-height: 135px;
+    border: 2px solid white;
 }
 
 .t4 {
@@ -1285,6 +1272,65 @@ hr {
     text-align: center;
     padding: 20px;
     min-height: 135px;
+    border: 2px solid white;
+}
+    
+    .problem-content {
+    display: block;
+    margin-bottom: 40px;
+    text-align: center;
+}
+    
+    .a1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
+
+.a2 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.gap {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    padding: 10px;
+}
+
+img.gap {
+    width: 60%
+}
+
+.b1 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
+
+.b2 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    background-color: #199EB8;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
 }
 }
 
@@ -1294,70 +1340,6 @@ hr {
     padding-right: 30px;
   }
     
-    .hero {
-      display: table;
-      position: relative;
-      background-image: url(../img/robo_human_wisdom_vert.svg);
-      background-size: 70vh;
-      padding: 150px 0;
-      color: #fff;
-      width: 100%;
-        margin-bottom: 0px;
-        padding-bottom: 9px;
-    }
-    
     img.gap {
     width: 80%
-}
-    
-    .stakeholders-content {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 20% 60% 20%;
-    justify-items: center;
-    align-items: center;
-    margin-bottom: 40px;
-    grid-gap: 1px;
-}
-
-.t1 {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    background-color: #199EB8;
-    color: white;
-    text-align: center;
-    padding: 20px;
-    min-height: 200px;
-}
-
-.t2 {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    background-color: #199EB8;
-    color: white;
-    text-align: center;
-    padding: 20px;
-    min-height: 135px;
-}
-
-.t3 {
-    grid-column: 1/2;
-    grid-row: 3/4;
-    background-color: #199EB8;
-    color: white;
-    text-align: center;
-    padding: 20px;
-    min-height: 135px;
-}
-
-.t4 {
-    grid-column: 2/3;
-    grid-row: 3/4;
-    background-color: #199EB8;
-    color: white;
-    text-align: center;
-    padding: 20px;
-    min-height: 135px;
-}
- 
 }
